[project]
name = "divingavran"
version = "2.1.4"
description = "My personal website."
authors = [{ name = "Divin Gavran", email = "hello@divingavran.com" }]
# NOTE: h11 was added directly as a lower version of h11 has a vulnerability
dependencies = ["h11>=0.16.0", "reflex>=0.7.11"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["divingavran"]

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.9.10"]
