[project]
name = "divingavran"
version = "2.1.14"
description = "My personal website."
authors = [{ name = "Divin Gavran", email = "hello@divingavran.com" }]
dependencies = [
    "pyyaml>=6.0.2",
    "reflex>=0.8.10",
    "starlette>=0.47.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["divingavran"]

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.9.10"]
